--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run docker container
-        run: docker-compose up -d --build --force-recreate
+        run: |
+          echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> .env
+          docker-compose up -d --build --force-recreate
         
       - name: Cleanup docker  container
         run: | 
