--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ discord == 1.7.3
 PyNaCl==1.5.0
 selenium==4.1.0
 requests==2.27.1
-lxml==4.7.1
+lxml==4.9.2
 structlog==21.5.0
+matplotlib==3.6.3
+numpy==1.24.1
