--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ lxml==4.9.2
 structlog==21.5.0
 matplotlib==3.6.3
 numpy==1.24.1
+git+https://github.com/ytdl-org/youtube-dl.git@master#egg=youtube_dl
