--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+  #  branches: [ "master" ]
 #  pull_request:
  #   branches: [ "master" ]
 
@@ -29,6 +29,7 @@ jobs:
       - name: Run docker container
         run: |
           echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> .env
+          echo "COMMIT_BRANCH=${{ github.ref_name }}" >> .env
           docker compose up -d --build --force-recreate
         
       - name: Cleanup docker  container
