--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ structlog==21.5.0
 matplotlib==3.6.3
 numpy==1.24.1
 tzdata==2023.3
+openai==0.27.6 
 git+https://github.com/ytdl-org/youtube-dl.git@master#egg=youtube_dl
