Update broken dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,16 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-generator==1.10
 async-timeout==4.0.2
-attrs==22.2.0
-Brotli==1.0.9
-certifi==2022.12.7
+attrs==23.1.0
+Brotli==1.1.0
+certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==2.0.12
 contourpy==1.0.7
-cryptography==40.0.1
+cryptography==40.0.2
 cycler==0.11.0
-discord.py==2.2.2
+discord==2.3.2
+discord.py==2.3.2
 exceptiongroup==1.1.1
 fonttools==4.39.3
 frozenlist==1.3.3
@@ -20,13 +21,13 @@ kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.6.3
 multidict==6.0.4
-mutagen==1.46.0
+mutagen==1.47.0
 numpy==1.24.1
 outcome==1.2.0
-packaging==23.0
+packaging==23.1
 Pillow==9.5.0
 pycparser==2.21
-pycryptodomex==3.17
+pycryptodomex==3.19.0
 PyNaCl==1.5.0
 pyOpenSSL==23.1.1
 pyparsing==3.0.9
@@ -42,8 +43,8 @@ trio-websocket==0.10.2
 tzdata==2023.3
 urllib3==1.26.15
 urllib3-secure-extra==0.1.0
-websockets==11.0
+websockets==11.0.3
 wsproto==1.2.0
-yarl==1.8.2
+yarl==1.9.2
+yt-dlp==2023.9.24
 youtube-search==2.1.2
-git+https://github.com/ytdl-org/youtube-dl.git@master#egg=youtube_dl
