--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ cycler==0.11.0
 discord==2.3.2
 discord.py==2.3.2
 exceptiongroup==1.1.1
+flask==3.0.0
+flask-sqlalchemy==3.1.1
 fonttools==4.39.3
 frozenlist==1.3.3
 h11==0.14.0
