--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: write service_account file
+        env:
+          GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
         run: |
-          echo ${{ secrets.GOOGLE_SERVICE_ACCOUNT }} > bot/service_account.json
+          echo "$GOOGLE_SERVICE_ACCOUNT" > bot/service_account.json
       
       # Runs a set of commands using the runners shell
       - name: Run docker container
