--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.idea
-.vscode
-__pycache__
+.idea/
+.vscode/
+__pycache__/
 *.pyc
-venv
-assets/AnimePic.png
+venv/
+bot/assets/AnimePic.png
+bot/assets/Ampltugraphy.png
 tmp/
 service_account.json
+.env
+controlpanel/data/
