--- a/controlpanel/nginx/nginx.conf
+++ b/controlpanel/nginx/nginx.conf
@@ -6,16 +6,22 @@ server {
     listen 80;
     server_name diablostrike.com www.diablostrike.com;
 
+    loaction .well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
     listen 443 ssl;
     server_name diablostrike.com www.diablostrike.com;
 
-    ssl_certificate /path/to/fullchain.pem;
-    ssl_certificate_key /path/to/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/diablostrike.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/diablostrike.com/privkey.pe;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
 
