--- a/.github/workflows/deploy_bot.yml
+++ b/.github/workflows/deploy_bot.yml
@@ -7,6 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     paths:
+      - '.github/workflows/deploy_bot.yml'
       - 'bot/**'
 
   # Allows you to run this workflow manually from the Actions tab
