--- a/controlpanel/docker-compose.yml
+++ b/controlpanel/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /var/discordbot/data/letsencrypt:/etc/letsencrypt
+      - /var/www/certbot:/var/www/certbot
     ports:
       - 80:80
       - 443:443
