[no ci] Update docker-compose commands in deploy_cp.yml and deploy_nginx.yml

--- a/.github/workflows/deploy_cp.yml
+++ b/.github/workflows/deploy_cp.yml
@@ -27,4 +27,4 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
           cd controlpanel
-          docker-compose up bot_control_panel -d --build --force-recreate
+          docker compose up bot_control_panel -d --build --force-recreate
