--- a/.github/workflows/deploy_nginx.yml
+++ b/.github/workflows/deploy_nginx.yml
@@ -27,4 +27,4 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
           cd controlpanel
-          docker compose up nginx -d --build --force-recreate
+          docker compose up nginx -d --force-recreate
