Fix typo in nginx.conf

--- a/controlpanel/nginx/nginx.conf
+++ b/controlpanel/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         server_name diablostrike.com www.diablostrike.com;
 
-        loaction .well-known/acme-challenge/ {
+        location .well-known/acme-challenge/ {
             root /var/www/certbot;
         }
 
