--- a/controlpanel/nginx/app.conf
+++ b/controlpanel/nginx/app.conf
@@ -5,8 +5,9 @@ upstream bot_control_panel {
 server {
     listen 80;
     server_name diablostrike.com www.diablostrike.com;
-
-    location .well-known/acme-challenge/ {
+    server_tokens off;
+    
+    location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
