Add SSL certificate volume mapping and enable HTTPS redirection

--- a/controlpanel/docker-compose.yml
+++ b/controlpanel/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     volumes:
       - ./nginx/:/etc/nginx/conf.d/:ro
       - /var/www/certbot/:/var/www/certbot/:ro
+      - /etc/letsencrypt/live/diablostrike.com/:/etc/letsencrypt/live/diablostrike.com/:ro
     ports:
       - 80:80
       - 443:443
