--- a/controlpanel/nginx/app.conf
+++ b/controlpanel/nginx/app.conf
@@ -16,34 +16,34 @@ server {
         return 301 https://$host$request_uri;
     }
 }
-# will uncomment this when I get a valid SSL certificate
-# server {
-#     listen 443 ssl;
-#     server_name diablostrike.com www.diablostrike.com;
 
-#     ssl_certificate /etc/letsencrypt/live/diablostrike.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/diablostrike.com/privkey.pe;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
+server {
+    listen 443 ssl;
+    server_name diablostrike.com www.diablostrike.com;
 
-#     # HSTS header
-#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    ssl_certificate /etc/letsencrypt/live/diablostrike.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/diablostrike.com/privkey.pe;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
 
-#     # for now static files are served by the bot_control_panel webserver
-#     # wouldn't bother configuring nginx to serve static files nor use a CDN
-#     # location /static/ {
-#     #     alias /app/static/;
+    # HSTS header
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # for now static files are served by the bot_control_panel webserver
+    # wouldn't bother configuring nginx to serve static files nor use a CDN
+    # location /static/ {
+    #     alias /app/static/;
         
-#     #     index index.html;
+    #     index index.html;
 
-#     #     try_files $uri $uri/ =404;
-#     # }
+    #     try_files $uri $uri/ =404;
+    # }
 
-#     location / {
-#         proxy_pass http://bot_control_panel;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location / {
+        proxy_pass http://bot_control_panel;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
