Fix SSL certificate key file name

--- a/controlpanel/nginx/app.conf
+++ b/controlpanel/nginx/app.conf
@@ -22,7 +22,7 @@ server {
     server_name diablostrike.com www.diablostrike.com;
 
     ssl_certificate /etc/letsencrypt/live/diablostrike.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/diablostrike.com/privkey.pe;
+    ssl_certificate_key /etc/letsencrypt/live/diablostrike.com/privkey.pem;
 
     # HSTS header
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
