[ADD] Send messages as bot from CP For now hardcoded though to one user as  for urgency for this feature

--- a/env.example
+++ b/env.example
@@ -1,10 +1,10 @@
 # Common variables
 TZ=
+DISCORD_BOT_TOKEN=
 
 # Bot variables
-DISCORD_BOT_TOKEN=
 BOT_PREFIX=
-DEV_CHANNEL=
+DEV_CHANNEL_ID=
 CONTROL_PANEL_URL=
 CONTROL_PANEL_TOKEN=
 
@@ -12,6 +12,9 @@ CONTROL_PANEL_TOKEN=
 FLASK_APP=
 FLASK_SECRET_KEY=
 
+PREFERRED_URL_SCHEME=
+
+CONTROL_PANEL_ADMIN_ID=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
