--- a/.github/workflows/deploy_cp.yml
+++ b/.github/workflows/deploy_cp.yml
@@ -21,6 +21,7 @@ jobs:
           CONTROL_PANEL_ADMIN_ID: ${{ secrets.CONTROL_PANEL_ADMIN_ID }}
           DISCORD_CLIENT_ID: ${{ secrets.DISCORD_CLIENT_ID }}
           DISCORD_CLIENT_SECRET: ${{ secrets.DISCORD_CLIENT_SECRET }}
+          DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
           POSTGRES_HOST: ${{ vars.POSTGRES_HOST }}
           POSTGRES_PORT: ${{ vars.POSTGRES_PORT }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
