--- a/controlpanel/docker-compose.yml
+++ b/controlpanel/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - TZ=${TZ}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
       - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
       - DISCORD_CLIENT_SECRET=${DISCORD_CLIENT_SECRET}
       - POSTGRES_HOST=${POSTGRES_HOST}
